# keyple-common-cpp-api

./: .clang-format  .clang-tidy  .cppcheck.suppress  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  NOTICE.md  PUBLISHERS.yml  README.md  _config.yml  index.md  list_versions.md
2.0.0/: _common_api_properties_8h.html  _common_api_properties_8h_source.html  _keyple_card_extension_8h.html  _keyple_card_extension_8h__incl.map  _keyple_card_extension_8h__incl.md5  _keyple_card_extension_8h_source.html  annotated.html  (+41 more)
2.0.0-SNAPSHOT/: _common_api_properties_8h.html  _common_api_properties_8h_source.html  _keyple_card_extension_8h.html  _keyple_card_extension_8h_source.html  _keyple_card_resource_profile_extension_8h.html  _keyple_card_resource_profile_extension_8h_source.html  _keyple_card_selection_response_8h.html  _keyple_card_selection_response_8h_source.html  _keyple_card_selector_8h.html  _keyple_card_selector_8h_source.html  _keyple_distributed_local_service_extension_8h.html  _keyple_distributed_local_service_extension_8h_source.html  _keyple_plugin_extension_8h.html  _keyple_plugin_extension_8h_source.html  _keyple_plugin_extension_factory_8h.html  _keyple_plugin_extension_factory_8h_source.html  _keyple_reader_extension_8h.html  _keyple_reader_extension_8h_source.html  _keyple_smart_card_8h.html  _keyple_smart_card_8h_source.html  annotated.html  classes.html  classkeyple_1_1core_1_1common_1_1_keyple_card_extension-members.html  classkeyple_1_1core_1_1common_1_1_keyple_card_extension.html  classkeyple_1_1core_1_1common_1_1_keyple_card_resource_profile_extension.html  classkeyple_1_1core_1_1common_1_1_keyple_card_selection_response.html  classkeyple_1_1core_1_1common_1_1_keyple_card_selector.html  classkeyple_1_1core_1_1common_1_1_keyple_distributed_local_service_extension.html  classkeyple_1_1core_1_1common_1_1_keyple_plugin_extension-members.html  classkeyple_1_1core_1_1common_1_1_keyple_plugin_extension.html  classkeyple_1_1core_1_1common_1_1_keyple_plugin_extension_factory-members.html  classkeyple_1_1core_1_1common_1_1_keyple_plugin_extension_factory.html  classkeyple_1_1core_1_1common_1_1_keyple_reader_extension-members.html  classkeyple_1_1core_1_1common_1_1_keyple_reader_extension.html  classkeyple_1_1core_1_1common_1_1_keyple_smart_card.html  dir_5eb159725f84c66aafd839904a4acdd0.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  (+6 more)
include/: CMakeLists.txt
include/keyple/core/common/: CommonApiProperties.hpp  KeypleCardExtension.hpp  KeypleCardResourceProfileExtension.hpp  KeypleCardSelectionResponse.hpp  KeypleCardSelector.hpp  KeypleDistributedLocalServiceExtension.hpp  KeyplePluginExtension.hpp  KeyplePluginExtensionFactory.hpp  KeypleReaderExtension.hpp  KeypleSmartCard.hpp
src/: CMakeLists.txt
src/main/: CMakeLists.txt  CommonApiProperties.h  KeypleCardExtension.h  KeypleCardResourceProfileExtension.h  KeypleCardSelectionResponse.h  KeypleCardSelector.h  KeypleDistributedLocalServiceExtension.h  KeyplePluginExtension.h  KeyplePluginExtensionFactory.h  KeypleReaderExtension.h  KeypleSmartCard.h
src/test/: CMakeLists.txt  CMakeLists.txt.googletest  CommonApiPropertiesTest.cpp  MainTest.cpp
(+107 files in other folders)
